Cambio del nombre de la aplicación y mostrado del nombre de la app en la pantalla principal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Bussify</string>
-    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_maps">Bussify</string>
 </resources>
