Se añadió a la lista de rutas a escoger una línea con el color de la misma

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Bussify</string>
     <string name="title_activity_maps">Bussify</string>
+    <string name="seleccione_una_ruta">Seleccione una ruta</string>
 </resources>
