--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Bussify</string>
     <string name="title_activity_maps">Bussify</string>
     <string name="seleccione_una_ruta">Seleccione una ruta</string>
+    <string name="buscar_destino">Buscar un destino</string>
+    <string name="ver_rutas">Ver rutas</string>
 </resources>
