Se agregó un botón para limpiar el mapa y otro botón para reiniciar las paradas en el mapa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="ver_rutas">Ver rutas</string>
     <string name="destinos_populares">Destinos Populares</string>
     <string name="verInfoRuta">Ver información de la ruta</string>
+    <string name="reiniciarMapa">Reiniciar los elementos del mapa</string>
+    <string name="limpiarMapa">Limpiar el mapa</string>
     <string name="ImagenBus">Imágen del autobús</string>
 </resources>
